unpackaged/main/default/objects/Case_Reason_Classification__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Cobra Email</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Hippo</fullName>
            </value>
            <value>
                <fullName>Panda</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>ApIntego</fullName>
            </value>
            <value>
                <fullName>Success Email</fullName>
            </value>
            <value>
                <fullName>Compliance Email</fullName>
                <isActive>false</isActive>
                <label>Compliance Email</label>
            </value>
            <value>
                <fullName>Email-POC</fullName>
                <isActive>false</isActive>
                <label>Email-POC</label>
            </value>
            <value>
                <fullName>HelloFax Email</fullName>
                <isActive>false</isActive>
                <label>HelloFax Email</label>
            </value>
            <value>
                <fullName>Partner Setup</fullName>
                <isActive>false</isActive>
                <label>Partner Setup</label>
            </value>
            <value>
                <fullName>Partner Transfer</fullName>
                <isActive>false</isActive>
                <label>Partner Transfer</label>
            </value>
            <value>
                <fullName>Payroll Care Email</fullName>
                <isActive>false</isActive>
                <label>Payroll Care Email</label>
            </value>
            <value>
                <fullName>Web-POC</fullName>
                <isActive>false</isActive>
                <label>Web-POC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>