unpackaged/main/default/objects/Case_Reason_Classification__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Benefits Care</fullName>
            </value>
            <value>
                <fullName>Cobra</fullName>
            </value>
            <value>
                <fullName>Company Taxability Audit</fullName>
            </value>
            <value>
                <fullName>EE Status Audit</fullName>
            </value>
            <value>
                <fullName>EOY Spot Check</fullName>
            </value>
            <value>
                <fullName>Otter Case</fullName>
            </value>
            <value>
                <fullName>Owner Status audit</fullName>
            </value>
            <value>
                <fullName>Payroll Care</fullName>
            </value>
            <value>
                <fullName>Payroll Suspension</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Shareholder Audit</fullName>
            </value>
            <value>
                <fullName>Suspension Audit</fullName>
            </value>
            <value>
                <fullName>Tax Res</fullName>
            </value>
            <value>
                <fullName>Escalated From Zendesk</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Assurance</fullName>
            </value>
            <value>
                <fullName>Benefits Change</fullName>
            </value>
            <value>
                <fullName>Modern Bank</fullName>
            </value>
            <value>
                <fullName>Benefits Renewal</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>QSEHRA</fullName>
            </value>
            <value>
                <fullName>Onboarding State Tax Audit</fullName>
            </value>
            <value>
                <fullName>Quarterly Sweep</fullName>
            </value>
            <value>
                <fullName>GEP CX</fullName>
            </value>
            <value>
                <fullName>BOR</fullName>
                <isActive>false</isActive>
                <label>BOR</label>
            </value>
            <value>
                <fullName>BOR Employee Events</fullName>
                <isActive>false</isActive>
                <label>BOR Employee Events</label>
            </value>
            <value>
                <fullName>Benefits Compliance Inquiry</fullName>
                <isActive>false</isActive>
                <label>Benefits Compliance Inquiry</label>
            </value>
            <value>
                <fullName>Benefits New Plan</fullName>
                <isActive>false</isActive>
                <label>Benefits New Plan</label>
            </value>
            <value>
                <fullName>Benefits Renewal alignment</fullName>
                <isActive>false</isActive>
                <label>Benefits Renewal alignment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>