unpackaged/main/default/objects/Case_Reason_Classification__c/fields/Fields_To_Require__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Require__c</fullName>
    <label>Fields To Require</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Payment Country</fullName>
            </value>
            <value>
                <fullName>BizDev Account</fullName>
            </value>
            <value>
                <fullName>Payroll Transfers Onboarding Error?</fullName>
            </value>
            <value>
                <fullName>Payroll Transfer Error Details</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Biz Dev Account</fullName>
                <isActive>false</isActive>
                <label>Biz Dev Account</label>
            </value>
            <value>
                <fullName>Is this a PT Error</fullName>
                <isActive>false</isActive>
                <label>Is this a PT Error</label>
            </value>
            <value>
                <fullName>PT Error Details</fullName>
                <isActive>false</isActive>
                <label>PT Error Details</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>