unpackaged/main/default/objects/Case_Reason_Classification__c/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Area</label>
    <referenceTo>Product_Area__c</referenceTo>
    <relationshipLabel>Case Reason Classifications</relationshipLabel>
    <relationshipName>Case_Reason_Classifications</relationshipName>
    <type>Lookup</type>
</CustomField>