unpackaged/main/default/objects/Case_Reason_Classification__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <externalId>true</externalId>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>