unpackaged/main/default/objects/Case_Reason_Classification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The field determines the type for the case reason.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Care</fullName>
            </value>
            <value>
                <fullName>Benefits Care</fullName>
            </value>
            <value>
                <fullName>Tax Res</fullName>
            </value>
            <value>
                <fullName>Tax Ops</fullName>
            </value>
            <value>
                <fullName>Risk Assurance</fullName>
            </value>
            <value>
                <fullName>Modern Bank</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>PayrollOps Audit</fullName>
            </value>
            <value>
                <fullName>GEP CX</fullName>
            </value>
            <value>
                <fullName>R&amp;D Tax Credits</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Benefits Care - Read Only</fullName>
                <isActive>false</isActive>
                <label>Benefits Care - Read Only</label>
            </value>
            <value>
                <fullName>Modern Bank - Read Only</fullName>
                <isActive>false</isActive>
                <label>Modern Bank - Read Only</label>
            </value>
            <value>
                <fullName>Payroll Care - Read Only</fullName>
                <isActive>false</isActive>
                <label>Payroll Care - Read Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>