unpackaged/main/default/objects/Case_Reason_Classification__c/validationRules/Prevent_Merge_Fields_in_Email_Content.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Merge_Fields_in_Email_Content</fullName>
    <active>true</active>
    <description>Prevents users from entering merge fields in Email Content. Causes Auto Email Flow to throw errors.</description>
    <errorConditionFormula>CONTAINS(Email_Content__c, &quot;{!&quot;)</errorConditionFormula>
    <errorDisplayField>Email_Content__c</errorDisplayField>
    <errorMessage>Please remove any merge fields ({!FIELD NAME}) before saving.</errorMessage>
</ValidationRule>